--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -148,8 +148,6 @@ input.form-control-custom + label::after {
   opacity: 0;
   cursor: pointer;
 }
-
-
 /*
 * ==========================================================
 *     LOGIN PAGE
@@ -161,6 +159,9 @@ input.form-control-custom + label::after {
   background: #f5f5f5;
   min-height: auto;
   padding-bottom: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
+  background-size: cover;
+  align-self: auto;
 }
 
 .login-page .form-outer,
@@ -170,6 +171,17 @@ input.form-control-custom + label::after {
   margin: 0 auto;
   padding: 20px 0;
   position: relative;
+  align-self: auto;
+}
+
+.login-page .form-inner,
+.register-page .form-inner {
+  padding: 40px 30px;
+  background: #fff3;
+  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  align-self: auto;
 }
 
 .login-page .copyrights,
@@ -185,15 +197,6 @@ input.form-control-custom + label::after {
   font-size: 0.6em;
   font-weight: 300;
   margin-bottom: 10px;
-}
-
-.login-page .form-inner,
-.register-page .form-inner {
-  padding: 40px 30px;
-  background: #fff;
-  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
 }
 
 .login-page .logo,
