--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -730,6 +730,7 @@ input[type='checkbox'] {
 .header {
 	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
 	background-size: cover;
+	/* background-color: #FEFCFC; */
 }
 
 .header .header-content {
