--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -728,9 +728,9 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	/* background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat; */
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
 	background-size: cover;
-	background-color: #8F00FF;
+	/* background-color: #8F00FF; */
 }
 
 .header .header-content {
